added templates for shopping lists
