# apps/server/src/app/app.module.ts
@@ -20,6 +20,8 @@ import { Task } from '../task/task.entity';
 import { TaskModule } from '../task/task.module';
 import { GeneralTask } from '../general-task/general-task.entity';
 import { GeneralTaskModule } from '../general-task/general-task.module';
+import { GeneralShoppingList } from '../general-shopping-list/general-shopping-list.entity';
+import { GeneralShoppingListModule } from '../general-shopping-list/general-shopping-list.module';
 import { UserApartment } from '../user-apartment/user-apartment.entity';
 import { UserApartmentModule } from '../user-apartment/user-apartment.module';
 import { AuthUser } from '../user/auth-user.entity';
@@ -50,6 +52,7 @@ import { AppService } from './app.service';
         ShoppingTemplate,
         Task,
         GeneralTask,
+        GeneralShoppingList,
         Comment,
         NotificationToken,
         Notification,
@@ -67,6 +70,7 @@ import { AppService } from './app.service';
     ShoppingListModule,
     NotificationModule,
     GeneralTaskModule,
+    GeneralShoppingListModule,
   ],
   controllers: [AppController],
   providers: [AppService],
