# libs/types/src/dto/index.ts
@@ -5,3 +5,4 @@ export * from './incident/incident.interface';
 export * from './task/task.dto';
 export * from './task/general-task.dto';
 export * from './recurrence-rule.dto';
+export * from './general-shopping-list.dto';
